[tool.poetry]
name = "huddler"
version = "0.1.0"
description = "Navigate 2D representations of your data"
authors = ["rluthi <18192364+rluthi@users.noreply.github.com>"]
license = "MIT license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"
altair = "^5.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
jupyterlab = "^4.0.0"
pytest = "^7.0.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
